CHANGES.txt - 09/15/2005
------------------------

CHANGES IN CUPS V1.2.0b1

	- The scheduler now verifies that a printer supports
	  Letter or A4 media sizes before setting them as the
	  initial default (STR #1250)
	- The cupstestppd program now flags bad Resolution
	  options (STR #1269)
	- The USB backend now retries printing when the printer
	  is disconnected or turned off (STR #1267)
	- Added new httpGetHostname() function to CUPS API, and
	  use it instead of gethostname() so that the web
	  interface will work correctly on systems whose hostname
	  is not the FQDN (STR #1266)
	- The scheduler now stops printers if the backend for the
	  queue is missing on startup (STR #1265)
	- The configure script now supports "--disable-library"
	  to disable particular image file format support
	  libraries, even if they are available on the build
	  system (STR #1248)
	- The IPP backend did not always report on the total
	  number of pages that were printed (STR #1251)
	- The lpstat program could display garbage date and time
	  values for locales whose date format exceeded 31
	  characters (STR #1263)
	- The cupstestppd program would segfault when testing
	  certain broken PPD files (STR #1268)
	- Dramatically reduced the overhead of implicit classes.
	- Added new cupsDir*() functions to CUPS API.
	- Printers can now be published individually for sharing.
	- Fixed a bug in the scheduler's startup signalling code
	  which caused cupsd to send the SIGUSR1 signal to the
	  init process instead of the original parent process
	  (STR #1258)
	- Added new on-line help CGI to web interface to provide
	  searchable help.
	- Devices are now tracked dynamically, with each query
	  doing a new device scan.  This eliminates a previous
	  startup delay caused by slow backends and allows new
	  printers to be seen without restarting the server,
	  however it limits the amount of device URI checking
	  that can be done (basically now the scheduler only