@@ -107,6 +107,27 @@ print_device(const char *resource,	/* I - SCSI device */
   {
     if ((scsi_fd = open(resource, O_RDWR | O_EXCL)) == -1)
     {
+      if (getenv("CLASS") != NULL)
+      {
+       /*
+        * If the CLASS environment variable is set, the job was submitted
+	* to a class and not to a specific queue.  In this case, we want
+	* to abort immediately so that the job can be requeued on the next
+	* available printer in the class.
+	*/
+
+        fputs("INFO: Unable to open SCSI device, queuing on next printer in class...\n",
+	      stderr);
+
+       /*
+        * Sleep 5 seconds to keep the job from requeuing too rapidly...
+	*/
+
+	sleep(5);
+
+        return (1);
+      }
+
       if (errno != EAGAIN && errno != EBUSY)
       {
 	fprintf(stderr, "ERROR: Unable to open SCSI device \"%s\" - %s\n",
