@@ -3,6 +3,9 @@ CHANGES.txt - 09/15/2005
 
 CHANGES IN CUPS V1.2.0b1
 
+	- All backends now abort on error when printing a job to
+	  a class - this allows the next printer in the class to
+	  print the job (STR #1084)
 	- The scheduler now verifies that a printer supports
 	  Letter or A4 media sizes before setting them as the
 	  initial default (STR #1250)
